
                     ngIRCd - Next Generation IRC Server

                        (c)2001-2005 Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD
  - Internal: Simplified resolver code.
  - Fixed a bug that caused the daemon to leak file descriptors when no
    resolver subprocesses could be created.
  - JOIN now supports more than one channel key at a time.
  - Implementec numeric "333": Time and user name who set a channel topic.
  - Fixed server NOTICEs to users with "s" mode ("server messages").
  - Enhanced the handler for PING and PONG commands: fix forwarding and enable
    back-passing of a client supplied additional argument of PING.
  - Changed handling of timeouts for unregistered connections: don't reset
    the counter if data is received and disconnect clients earlier.
  - Fixed a format string bug in "connection statistics" messages to clients.
  - Removed unnecessary #define of "LOCAL", now use plain C "static" instead.
  - Channel topics are no longer limited to 127 characters: now the only limit
    is the maximum length of an IRC command, i. e. 512 bytes (in practice, this
    limits the topic to about 490 characters due to protocol overhead).
  - Reverse DNS lookup code now checks the result by doing an additional
    lookup to prevent spoofing.
  - Added new IO layer which (optionally) supports epoll() and kqueue() in
    addition to the select() interface.

ngIRCd 0.9.1 (2005-08-03)

  - The KILL command killed much more than desired (including server links!)
    when the target user is connected to a remote server. Bug introduced in
    ngIRCd 0.9.0 ...  Reported by <qssl@fastmail.fm>, Thanks!
  - Changed some constants to be "signed" (instead of unsigned) to solve
    problems with old (pre-ANSI) compilers.
