@@ -11,6 +11,9 @@
 
 
 ngIRCd CVSHEAD
+
+  - Fixed a bug that could cause the damon to crash when outgoing server
+    connections can't be established.
   - Internal: Simplified resolver code.
   - Fixed a bug that caused the daemon to leak file descriptors when no
     resolver subprocesses could be created.
@@ -641,4 +644,4 @@ ngIRCd 0.0.1, 31.12.2001
 
 
 -- 
-$Id: ChangeLog,v 1.295 2005/09/12 19:10:20 fw Exp $
+$Id: ChangeLog,v 1.296 2005/10/11 19:29:23 alex Exp $
